--- a/mybatis-plus-generator/src/main/resources/templates/controller.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/controller.java.vm
@@ -33,6 +33,6 @@ public class ${table.controllerName} extends ${superControllerClass} {
 #else
 public class ${table.controllerName} {
 #end
-
+    @RequestMapping()
 }
 #end
