--- a/mybatis-plus-generator/src/main/resources/templates/mapper.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/mapper.java.vm
@@ -18,8 +18,10 @@ import ${mapperAnnotationClass.name};
 @${mapperAnnotationClass.simpleName}
 #end
 #if(${kotlin})
+
 interface ${table.mapperName} : ${superMapperClass}<${entity}>
 #else
+@Mapper
 public interface ${table.mapperName} extends ${superMapperClass}<${entity}> {
 
 }
