--- a/mybatis-plus-generator/src/main/resources/templates/serviceImpl.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/serviceImpl.java.vm
@@ -4,7 +4,6 @@ import ${package.Entity}.${entity};
 import ${package.Mapper}.${table.mapperName};
 import ${package.Repository}.${table.RepositoryName};
 import ${superRepositoryImplClassPackage};
-import org.springframework.stereotype.Repository;
 
 /**
  * <p>
@@ -14,13 +13,13 @@ import org.springframework.stereotype.Repository;
  * @author ${author}
  * @since ${date}
  */
-@Repository
+@Service
 #if(${kotlin})
 open class ${table.RepositoryImplName} : ${superRepositoryImplClass}<${table.mapperName}, ${entity}>(), ${table.RepositoryName} {
 
 }
 #else
-public class ${table.RepositoryImplName} extends ${superRepositoryImplClass}<${table.mapperName}, ${entity}> implements ${table.RepositoryName} {
+public class ${table.serviceImplName} implements ${table.serviceName} {
 
 }
 #end
