--- a/mybatis-plus-generator/src/main/resources/templates/repository.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/repository.java.vm
@@ -14,7 +14,7 @@ import ${superRepositoryClassPackage};
 #if(${kotlin})
 interface ${table.RepositoryName} : ${superRepositoryClass}<${entity}>
 #else
-public interface ${table.RepositoryName} extends ${superRepositoryClass}<${entity}> {
+public interface ${table.RepositoryName} extends IService<${entity}> {
 
 }
 #end
