--- a/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
@@ -1,8 +1,5 @@
 package ${package.Entity};
 
-#foreach($pkg in ${table.importPackages})
-import ${pkg};
-#end
 #if(${springdoc})
 import io.swagger.v3.oas.annotations.media.Schema;
 #elseif(${swagger})
@@ -29,23 +26,22 @@ import lombok.Setter;
 @Getter
 @Setter
     #if(${chainModel})
-    @Accessors(chain = true)
+@Accessors(chain = true)
     #end
 #end
 #if(${table.convert})
-@TableName("${schemaName}${table.name}")
 #end
 #if(${springdoc})
 @Schema(name = "${entity}", description = "$!{table.comment}")
 #elseif(${swagger})
-@ApiModel(value = "${entity}对象", description = "$!{table.comment}")
+@ApiModel(value = "${entity}保存req", description = "$!{table.comment}")
 #end
 #if(${superEntityClass})
-public class ${entity} extends ${superEntityClass}#if(${activeRecord})<${entity}>#end {
+public class ${entity}SaveReq extends ${superEntityClass}#if(${activeRecord})<${entity}>#end {
 #elseif(${activeRecord})
     public class ${entity} extends Model<${entity}> {
 #elseif(${entitySerialVersionUID})
-    public class ${entity} extends BaseEntity {
+    public class ${entity}SaveReq extends BaseEntity {
 #else
     public class ${entity} {
 #end
