--- a/mybatis-plus-generator/src/main/resources/templates/mapper.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/mapper.java.vm
@@ -1,7 +1,6 @@
 package ${package.Mapper};
 
-import ${package.Entity}.${entity};
-import ${superMapperClassPackage};
+import org.apache.ibatis.annotations.Mapper;
 #if(${mapperAnnotationClass})
 import ${mapperAnnotationClass.name};
 #end
