--- a/mybatis-plus-generator/src/main/resources/templates/service.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/service.java.vm
@@ -1,8 +1,5 @@
 package ${package.Repository};
 
-import ${package.Entity}.${entity};
-import ${superRepositoryClassPackage};
-
 /**
  * <p>
  * $!{table.comment} 服务类
@@ -14,7 +11,35 @@ import ${superRepositoryClassPackage};
 #if(${kotlin})
 interface ${table.RepositoryName} : ${superRepositoryClass}<${entity}>
 #else
-public interface ${entity}Service {
+public interface I${entity}Service {
+
+
+    ${entity} get${entity}(${entity}DeleteReq request);
+
+    /**
+    * 保存
+    * @param request
+    */
+    void save${entity}(${entity}SaveReq request);
+
+    /**
+    *删除
+    * @param request
+    */
+     void delete${entity}(${entity}DeleteReq request);
+
+    /**
+    * 列表查询
+    * @param request
+    */
+    List<${entity}> get${entity}List(${entity}ListReq request);
+
+    /**
+    * 分页查询
+     * @param request
+    */
+    ApiPage<${entity}PageRes> get${entity}PageList(${entity}PageReq request);
+
 
 }
 #end
