--- a/mybatis-plus-generator/src/main/resources/templates/controller.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/controller.java.vm
@@ -1,11 +1,13 @@
 package ${package.Controller};
 
 import org.springframework.web.bind.annotation.RequestMapping;
+import cn.testin.base.common.core.utils.R;
 #if(${restControllerStyle})
 import org.springframework.web.bind.annotation.RestController;
 #else
 import org.springframework.stereotype.Controller;
 #end
+
 
 /**
  * <p>
@@ -36,38 +38,38 @@ public class ${table.controllerName} {
     private I${entity}Service ${entityLowerCase}Service;
 
     @ApiOperation(value = "记录查询")
-    @RequestMapping("/get${entity}")
-    public ApiResult<${entity}> get${entity}(@Validated @RequestBody ${entity}DeleteReq request) {
-        return ApiResult.success(${entityLowerCase}Service.get${entity}(request));
+    @GetMapping("/{id}")
+    public R get${entity}(@PathVariable("id") Long id) {
+        return R.ok((${entityLowerCase}Service.get${entity}(id)));
     }
 
     @ApiOperation(value = "保存")
-    @RequestMapping("/Save${entity}")
-    public ApiResult save${entity}(@Validated @RequestBody ${entity}SaveReq request) {
+    @PostMapping("/save")
+    public R save${entity}(@Validated @RequestBody ${entity}SaveReq request) {
         ${entityLowerCase}Service.save${entity}(request);
-        return ApiResult.success(true);
+        return R.ok();
     }
 
 
     @ApiOperation(value = "删除")
-    @RequestMapping("/Delete${entity}")
-    public ApiResult delete${entity}(@Validated @RequestBody ${entity}DeleteReq request) {
+    @PostMapping("/delete")
+    public R delete${entity}(@Validated @RequestBody ${entity}DeleteReq request) {
         ${entityLowerCase}Service.delete${entity}(request);
-        return ApiResult.success(true);
+        return R.ok();
     }
 
 
     @ApiOperation(value = "列表查询")
-    @RequestMapping("/Describe${entity}List")
-    public ApiResult<List<${entity}>> get${entity}List(@Validated @RequestBody ${entity}ListReq request) {
-        return ApiResult.success(${entityLowerCase}Service.get${entity}List(request));
+    @PostMapping("/list")
+    public R get${entity}List(@Validated @RequestBody ${entity}ListReq request) {
+        return R.ok(${entityLowerCase}Service.get${entity}List(request));
     }
 
 
     @ApiOperation(value = "分页查询")
-    @RequestMapping("Describe${entity}Page")
-    public ApiResult<ApiPage<${entity}PageRes>> get${entity}PageList(@Validated @RequestBody ${entity}PageReq request) {
-        return ApiResult.success(${entityLowerCase}Service.get${entity}PageList(request));
+    @PostMapping("page")
+    public R get${entity}PageList(@Validated @RequestBody ${entity}PageReq request) {
+        return R.ok(${entityLowerCase}Service.get${entity}PageList(request));
     }
 
 }
