--- a/mybatis-plus-generator/src/main/resources/templates/listReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/listReq.java.vm
@@ -5,10 +5,9 @@ import io.swagger.v3.oas.annotations.media.Schema;
 #elseif(${swagger})
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
+import java.util.Date;
 #end
 #if(${entityLombokModel})
-import lombok.Getter;
-import lombok.Setter;
     #if(${chainModel})
 import lombok.experimental.Accessors;
     #end
@@ -40,7 +39,7 @@ public class ${entity}ListReq extends ${superEntityClass}#if(${activeRecord})<${
 #elseif(${activeRecord})
     public class ${entity}ListReq extends Model<${entity}> {
 #elseif(${entitySerialVersionUID})
-public class ${entity}ListReq extends BaseEntity {
+public class ${entity}ListReq {
 #else
     public class ${entity} {
 #end
@@ -55,6 +54,9 @@ public class ${entity}ListReq extends BaseEntity {
         @Schema(description = "${field.comment}")
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
+        #if("$!field.columnType" == "LOCAL_DATE_TIME")
+        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        #end
         #else
         /**
          * ${field.comment}
