--- a/mybatis-plus-generator/src/main/resources/templates/pageRes.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/pageRes.java.vm
@@ -5,12 +5,11 @@ import io.swagger.v3.oas.annotations.media.Schema;
 #elseif(${swagger})
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
+import java.util.Date;
 #end
 #if(${entityLombokModel})
-import lombok.Getter;
-import lombok.Setter;
     #if(${chainModel})
-    import lombok.experimental.Accessors;
+import lombok.experimental.Accessors;
     #end
 #end
 
@@ -40,7 +39,7 @@ public class ${entity}PageRes extends ${superEntityClass}#if(${activeRecord})<${
 #elseif(${activeRecord})
     public class ${entity} extends Model<${entity}> {
 #elseif(${entitySerialVersionUID})
-    public class ${entity}PageRes extends BaseEntity {
+    public class ${entity}PageRes {
 #else
     public class ${entity} {
 #end
@@ -55,6 +54,9 @@ public class ${entity}PageRes extends ${superEntityClass}#if(${activeRecord})<${
         @Schema(description = "${field.comment}")
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
+        #if("$!field.columnType" == "LOCAL_DATE_TIME")
+        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        #end
         #else
         /**
          * ${field.comment}
