--- a/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
@@ -5,12 +5,13 @@ import io.swagger.v3.oas.annotations.media.Schema;
 #elseif(${swagger})
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
+import java.util.Date;
 #end
 #if(${entityLombokModel})
 import lombok.Getter;
 import lombok.Setter;
     #if(${chainModel})
-    import lombok.experimental.Accessors;
+import lombok.experimental.Accessors;
     #end
 #end
 
@@ -22,9 +23,8 @@ import lombok.Setter;
  * @author ${author}
  * @since ${date}
  */
+@Data
 #if(${entityLombokModel})
-@Getter
-@Setter
     #if(${chainModel})
 @Accessors(chain = true)
     #end
@@ -41,7 +41,7 @@ public class ${entity}SaveReq extends ${superEntityClass}#if(${activeRecord})<${
 #elseif(${activeRecord})
     public class ${entity} extends Model<${entity}> {
 #elseif(${entitySerialVersionUID})
-    public class ${entity}SaveReq extends BaseEntity {
+    public class ${entity}SaveReq {
 #else
     public class ${entity} {
 #end
@@ -56,6 +56,9 @@ public class ${entity}SaveReq extends ${superEntityClass}#if(${activeRecord})<${
         @Schema(description = "${field.comment}")
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
+        #if("$!field.columnType" == "LOCAL_DATE_TIME")
+        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        #end
         #else
         /**
          * ${field.comment}
