--- a/mybatis-plus-generator/src/main/resources/templates/pageReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/pageReq.java.vm
@@ -55,6 +55,9 @@ public class ${entity}PageReq extends PageBaseEntity {
         @Schema(description = "${field.comment}")
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
+        #if("$!field.columnType" == "LOCAL_DATE_TIME")
+        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        #end
         #else
         /**
          * ${field.comment}
