--- a/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
@@ -56,6 +56,9 @@ public class ${entity}SaveReq extends ${superEntityClass}#if(${activeRecord})<${
         @Schema(description = "${field.comment}")
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
+        #if("$!field.columnType" == "LOCAL_DATE_TIME")
+        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        #end
         #else
         /**
          * ${field.comment}
