--- a/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/saveReq.java.vm
@@ -57,7 +57,7 @@ public class ${entity}SaveReq extends ${superEntityClass}#if(${activeRecord})<${
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
         #if("$!field.columnType" == "LOCAL_DATE_TIME")
-        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        @JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
         #end
         #else
         /**
