--- a/mybatis-plus-generator/src/main/resources/templates/listReq.java.vm
+++ b/mybatis-plus-generator/src/main/resources/templates/listReq.java.vm
@@ -55,7 +55,7 @@ public class ${entity}ListReq {
         #elseif(${swagger})
         @ApiModelProperty("${field.comment}")
         #if("$!field.columnType" == "LOCAL_DATE_TIME")
-        @JsonFormat(pattern = DatePattern.NORM_DATETIME_MINUTE_PATTERN)
+        @JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
         #end
         #else
         /**
